# gnome-chat

./: ARTISTS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-chat.doap
data/: Makefile.am  gnome-chat.desktop.in.in  org.gnome.chat.gschema.xml.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  cs.po  de.po  es.po  fr.po  gl.po  he.po  hu.po  id.po  nl.po  pl.po  pt_BR.po  sl.po  sr.po  sr@latin.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: Makefile.am  chat-app-menu.ui  chat-application.c  chat-application.h  chat-client-factory.c  chat-client-factory.h  chat-constants.h  chat-contacts-list-dialog.c  chat-contacts-list-dialog.h  chat-contacts-list-dialog.ui  chat-conversation-view.c  chat-conversation-view.h  chat-conversation-view.ui  chat-conversations-list.c  chat-conversations-list.h  chat-embed.c  chat-embed.h  chat-embed.ui  chat-enums.c.template  chat-enums.h.template  chat-generate-about  chat-main-toolbar.c  chat-main-toolbar.h  chat-main-toolbar.ui  chat-main-window.c  chat-main-window.h  chat-main-window.ui  chat-main.c  chat-manager.c  chat-manager.h  chat-mode-controller.c  chat-mode-controller.h  chat-settings.c  chat-settings.h  chat-utils.c  chat-utils.h  chat.css  chat.gresource.xml  empathy-ui-utils.c  empathy-ui-utils.h  (+2 more)
